correction z-index classify__option

--- a/sass/components/_inputs.scss
+++ b/sass/components/_inputs.scss
@@ -11,6 +11,7 @@
         border-radius: 5px;
         position: absolute;
         left: 7em;
+        z-index: 5;
         i{
             position: absolute;
             left: 7.5em;
