--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -15,6 +15,7 @@
             font-size: 36px;
             color: $secondary;
             font-weight: 400;
+            margin-bottom: 0;
         }
         h3{
             font-size: 13px;
