--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
   border-radius: 5px;
   position: absolute;
   left: 7em;
+  z-index: 5;
 }
 .classify .classify__options i {
   position: absolute;
@@ -382,6 +383,7 @@ body {
   font-size: 36px;
   color: #D3573C;
   font-weight: 400;
+  margin-bottom: 0;
 }
 .autors article h3 {
   font-size: 13px;
